<resources>
    <string name="app_name">100 Yawmiyyi</string>
    <string name="navigation_drawer_open" translatable="false">Drawer Open</string>
    <string name="navigation_drawer_close" translatable="false">Drawer Closed</string>
    <string name="title_activity_maps">Map</string>
    <string name="search">Write Place to Search…</string>
    <string name="default_info_title">Beriut</string>
    <string name="default_info_snippet">Lenabon Capital</string>
    <string name="pick_place">Pick Place</string>
    <string name="show_directions">Show Directions</string>
    <string name="title_activity_admob">MainActivity</string>
    <string name="action_settings">Settings</string>
    <string name="admob_rewarded_ad_id" translatable="false">ca-app-pub-2559564046715323/7743978013</string>
    <string name="admob_rewarded_ad_id10" translatable="false">ca-app-pub-2559564046715323/2388898922</string>
    <string name="admob_initial" translatable="false">ca-app-pub-3940256099942544/1033173712</string>
    <string name="admob_app_id" translatable="false">ca-app-pub-2559564046715323~8859756741</string>
    <string name="admob_native_ad_id" translatable="false">ca-app-pub-3940256099942544/2247696110</string>
    <string name="interstitial_ad_unit_id">ca-app-pub-3940256099942544/1033173712</string>
    <string name="unknown_error">unknown error</string>
    <string name="error">Error</string>
    <string name="no_internet">No internet connection!</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyAiAir1uMz3NwJDd9vjIhqeEuTUgw2S7VM</string>
    <string name="welcome_title_1">100 Yawmiyyi</string>
    <string name="welcome_title_2">Win A Ticket</string>
    <string name="welcome_title_3">Invite and Win!</string>
    <string name="welcome_text_1">Is an application that gives users tickets to join a daily draw of 100$. The draw lots will be done randomly and mechanically.</string>
    <string name="welcome_text_2">To win a ticket, the user does one of the task types: watch advertising videos, answer a group of questions or do tasks via social media.</string>
    <string name="welcome_text_3">You can invite your friends to join the application to collect points and exchange them by several digital gifts.</string>
    <string name="lets_start">Lets Start !</string>
    <string name="quick_service_for_kitchens_and_restaurants_in_saudi_arabia_to_book_banquets_and_buffets">Quick service for kitchens and restaurants in Saudi Arabia to book banquets and buffets</string>
    <string name="choose_your_favorite_language">Choose your favorite Language</string>
    <string name="arabic">Arabic</string>
    <string name="english">English</string>
    <string name="choose_country">Choose country</string>
    <string name="saudia_arabia">Saudia Arabia</string>
    <string name="done">Done</string>
    <string name="choose_city">Choose City</string>
    <string name="choose_region">Choose Region</string>
    <string name="enter_the_4_digit_code_that_was_sent_to_the_number">Please fill below the code sent to your mobile number</string>
    <string name="login">Login</string>
    <string name="resend_code"> Send Again</string>
    <string name="phone_number">Phone Number</string>
    <string name="skip">Skip</string>
    <string name="select_your_address_to_receive_your_order">Select your address to receive your order</string>
    <string name="choose_the_right_kitchen_for_your_occasion_whether_it_is_a_restaurant_independent_chefs_or_mobile_carts">Choose the right kitchen for your occasion, whether it is a restaurant, independent chefs or mobile carts</string>
    <string name="start">Start</string>
    <string name="continue_">Continue</string>
    <string name="continue_1">Continue</string>
    <string name="yes_i_have_read_it_and_agree_to_it">Yes, I have read it and agree to it</string>
    <string name="have_you_read_our_terms_of_use_and_privacy_policy">Have you read our Terms of Use and Privacy Policy</string>
    <string name="everything_that_comes_to_your_mind_you_can_find_it_with_us">Everything that comes to your mind, you can find it with us</string>
    <string name="enter_your_phone_number_for_continue">Enter your phone number for continue</string>
    <string name="send_code">Send Again</string>
    <string name="enter_code_here">Enter Code Here</string>
    <string name="check_code">Check Code!</string>
    <string name="don_t_receive_code_click_here">Didn’t receive the code? <u>Send Again</u></string>
    <string-array name="home_filter">
        <item>All</item>
        <item>Restaurants</item>
        <item>Oriental food</item>
        <item>Western food</item>
        <item>Express delivery</item>
        <item>Slow delivery</item>
    </string-array>
    <string-array name="food_filter">
        <item>Main Meals</item>
        <item>Cold Appetizers</item>
        <item>Hot Appetizers</item>
        <item>Sandwich</item>
    </string-array>
    <string-array name="yob">
        <item>1990</item>
        <item>1991</item>
        <item>1992</item>
        <item>1993</item>
        <item>1994</item>
        <item>1995</item>
        <item>1996</item>
        <item>1997</item>
        <item>1998</item>
        <item>1999</item>
        <item>2000</item>
    </string-array>
    <string name="sex">Sex</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_home">Home</string>
    <string name="default_location">Beirut, Lebanon</string>
    <string name="title_chats">Chats</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_my_order">My Orders</string>
    <string name="title_orders">Orders</string>
    <string name="title_profile">Profile</string>
    <string name="restaurant_name_meal">Restaurant name, meal..</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="birthdate">Birthdate</string>
    <string name="day">Day</string>
    <string name="year">Year</string>
    <string name="month">Month</string>
    <string name="address">Address</string>
    <string name="house">House</string>
    <string name="house_address">House Address</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="delivery_time">Delivery time</string>
    <string name="processing_time">Processing Time</string>
    <string name="food_menu">Food Menu</string>
    <string name="reviews">Reviews</string>
    <string name="gallery">Gallery</string>
    <string name="add">Add</string>
    <string name="show_cart">Show Cart</string>
    <string name="items">Items</string>
    <string name="previous">Previous</string>
    <string name="confirm_address">Confirm Address</string>
    <string name="current_address">Your Current Address</string>
    <string name="change">change</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="settings_and_features">Settings and features</string>
    <string name="about_app">About app</string>
    <string name="app_link" translatable="false">https://play.google.com/store/apps/details?id=com.magma.miyyiyawmiyyi.android</string>
    <string name="invite_your_friends">Invite your friends</string>
    <string name="logout">Logout</string>
    <string name="default_delivery_time">Delivery within 30 minutes, without traffic</string>
    <string name="continue_to_next_step">Continue to next step</string>
    <string name="hour">Hour</string>
    <string name="number_of_people">Number of people</string>
    <string name="table_reservation">Table Reservation</string>
    <string name="time_for_food_to_come_to_the_table">Time for food to come to the table</string>
    <string name="payment_method">Payment method</string>
    <string name="customize">Customize</string>
    <string name="special_instructions_for_the_chef_or_restaurant">Special instructions for the chef or restaurant</string>
    <string name="total">Total</string>
    <string name="total_items">Total of items</string>
    <string name="delivery_price">Delivery price</string>
    <string name="personal_info">Your personal information</string>
    <string name="name_and_phone">Name, phone number</string>
    <string name="order_inside_a_restaurant">Order inside a restaurant</string>
    <string name="home_delivery">Home Delivery</string>
    <string name="receipt_from_the_restaurant">Receipt from the restaurant</string>
    <string name="application_not_found">Application not found</string>
    <string name="by_card_online">By card (online)</string>
    <string name="pay_on_delivery">Pay on delivery</string>
    <string name="share_the_bill_to_a_friend">Share the bill to a friend</string>
    <string name="we_accept_all_type_1_type_2_and_type_3_cards">We accept all type 1, type 2 and type 3 cards</string>
    <string name="card_name">Card name</string>
    <string name="card_number">Card number</string>
    <string name="card_end_date">Card end date (month/year)</string>
    <string name="save_card_information">Save card information</string>
    <string name="confirm">Confirm</string>
    <string name="copy_link">Copy link</string>
    <string name="field_can_not_be_empty">Field can not be empty</string>
    <string name="name_can_not_be_empty">Name can not be empty</string>
    <string name="date_of_birth_is_required">Date of birth is required</string>
    <string name="please_enter_avalid_phone">Please enter a valid phone</string>
    <string name="please_enter_different_phone">Please enter different phone</string>
    <string name="please_enter_avalid_email">Please enter a valid email</string>
    <string name="please_enter_avalid_password">Password must at least 8 characters</string>
    <string name="please_enter_avalid_confirm_password">Confirm password must be same password</string>
    <string name="next">Next</string>
    <string name="top_restaurant">Top Restaurant</string>
    <string name="powered_by">Powered by</string>
    <string name="magma">Magma</string>
    <string name="mobile">Mobile</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="forget_password">Forget Password?</string>
    <string name="do_not_have_account">Don\'t have account?</string>
    <string name="sign_in_with_facebook">Sign in with facebook</string>
    <string name="sign_in_with_google">Sign in with google</string>
    <string name="or">or</string>
    <string name="sign_up">Sign Up</string>
    <string name="continue_as_guest">Continue As Guest</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="email_hint">Email : (Optional)</string>
    <string name="verification_code">Number Verification</string>
    <string name="a_verfication_code_has_been_sent_to_your_mobile_number">A verification code has been sent to your mobile number.</string>
    <string name="verify">Verify</string>
    <string name="change_number">Change Number</string>
    <string name="invitation_code">Invitation Code</string>
    <string name="please_fill_enter_the_code">If you are invited by a friend, then enter the code</string>
    <string name="title_tasks">Tasks</string>
    <string name="title_tickets">Tickets</string>
    <string name="title_live_stream">Live Stream</string>
    <string name="invitations">Invitations</string>
    <string name="our_store">Store</string>
    <string name="settings">Settings</string>
    <string name="your_orders">Orders</string>
    <string name="about_the_app">About Us</string>
    <string name="reach_max_tickets">You have reached your maximum tickets</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="confirm_task">Confirm task</string>
    <string name="confirm_task_body">Did you complete this task?</string>
</resources>