<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_1"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_user_filled"
        android:title="@string/title_profile" />

    <item
        android:id="@+id/navigation_invitations"
        android:icon="@drawable/ic_email"
        android:title="@string/invitations" />

    <item
        android:id="@+id/navigation_our_store"
        android:icon="@drawable/ic_store"
        android:title="@string/our_store" />

    <item
        android:id="@+id/navigation_settings"
        android:icon="@drawable/ic_settings"
        android:title="@string/settings" />

    <item
        android:id="@+id/navigation_your_orders"
        android:icon="@drawable/ic_order"
        android:title="@string/your_orders" />

    <item
        android:id="@+id/navigation_about_the_app"
        android:icon="@drawable/ic_info"
        android:title="@string/about_the_app" />

</menu>