<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/navigation_tasks"
        android:icon="@drawable/ic_tasks"
        android:title="@string/title_tasks" />

    <item
        android:id="@+id/navigation_tickets"
        android:icon="@drawable/ic_tickets"
        android:title="@string/title_tickets" />

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_live_stream"
        android:icon="@drawable/ic_live_stream"
        android:title="@string/title_live_stream" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_user"
        android:title="@string/title_profile" />

</menu>