<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".presentation.home.ui.confirm_task.ConfirmEndTaskFragment">

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="10dp"
            android:gravity="start"
            android:padding="20dp"
            android:text="@string/confirm_task"
            android:textColor="@color/colorPrimary"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/body"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="30dp"
            android:paddingEnd="20dp"
            android:paddingBottom="20dp"
            android:text="@string/confirm_task_body"
            android:textColor="?attr/colorOnPrimary"
            android:textSize="18sp"
            app:layout_constraintTop_toBottomOf="@id/title" />


        <TextView
            android:id="@+id/noTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:text="@string/no"
            android:textColor="?attr/colorOnPrimary"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/body" />

        <TextView
            android:id="@+id/yesTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:text="@string/yes"
            android:textColor="?attr/colorOnPrimary"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@id/noTV"
            app:layout_constraintTop_toBottomOf="@id/body" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
