<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/lyt_verification_code"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            style="@style/MaterialTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/spacing_large"
            android:gravity="center"
            android:text="@string/verification_code"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/size_title"
            android:textStyle="bold" />

        <TextView
            style="@style/MaterialTextViewBodyStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/spacing_large"
            android:gravity="center"
            android:padding="@dimen/spacing_medium"
            android:text="@string/a_verfication_code_has_been_sent_to_your_mobile_number"
            android:textColor="@color/gray" />


        <com.mukesh.OtpView
            android:id="@+id/otp_number"
            style="@style/OtpWidget.OtpView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginHorizontal="@dimen/spacing_large"
            android:autofillHints="@string/app_name"
            android:inputType="number"
            android:itemBackground="@color/grey_20"
            android:padding="@dimen/spacing_large"
            android:textColor="@color/black"
            app:OtpItemCount="6"
            app:OtpLineColor="@color/grey_20"
            app:OtpViewType="line"
            tools:ignore="LabelFor"
            tools:text="456455" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_verify"
            style="@style/MaterialButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginHorizontal="@dimen/spacing_default"
            android:layout_marginBottom="@dimen/spacing_large"
            android:minWidth="250dp"
            android:minHeight="0dp"
            android:padding="@dimen/spacing_default"
            android:text="@string/verify"
            android:textColor="@color/white"
            android:textSize="@dimen/size_title" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginHorizontal="@dimen/spacing_profile_top"
            android:layout_marginTop="@dimen/spacing_medium"
            android:background="@color/grey_20" />

    </androidx.appcompat.widget.LinearLayoutCompat>
</layout>