<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.magma.miyyiyawmiyyi.android.presentation.registration.invitation_link.InvitationLinkViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/color_background">

        <TextView
            android:id="@+id/txt_change_number"
            style="@style/MaterialTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_medium"
            android:layout_marginBottom="@dimen/spacing_large"
            android:padding="@dimen/spacing_large"
            android:text="@string/change_number"
            android:gravity="center"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/size_body"
            android:drawablePadding="@dimen/spacing_default"
            android:onClick="@{()->viewModel.onChangeNumber()}"
            android:background="?attr/selectableItemBackground"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:drawableStartCompat="@drawable/ic_arrow_left_filled"
            app:drawableTint="@color/colorPrimary" />

        <ImageView
            android:id="@+id/img_board"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/app_name"
            android:layout_marginTop="@dimen/vertical_20dp"
            android:padding="@dimen/spacing_large"
            android:scaleType="fitCenter"
            android:src="@drawable/logo"
            android:layout_marginVertical="@dimen/spacing_large"
            app:layout_constraintVertical_chainStyle="packed"
            app:layout_constraintBottom_toTopOf="@+id/lyt_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/lyt_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toTopOf="@+id/otp_number"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/img_board">

            <TextView
                android:id="@+id/txt_title"
                style="@style/MaterialBoldTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginTop="@dimen/spacing_large"
                android:layout_marginHorizontal="@dimen/spacing_default"
                android:text="@string/invitation_code"
                android:textColor="@color/dark_red"
                android:textSize="@dimen/size_title" />

            <TextView
                android:id="@+id/txt_body"
                style="@style/MaterialTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_margin="@dimen/spacing_default"
                android:text="@string/please_fill_enter_the_code"
                android:textColor="@color/grey_40" />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <com.mukesh.OtpView
            android:id="@+id/otp_number"
            style="@style/OtpWidget.OtpView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autofillHints="@string/app_name"
            android:inputType="number"
            android:layout_marginVertical="@dimen/spacing_large"
            android:textColor="@color/colorPrimary"
            app:OtpItemCount="4"
            app:OtpViewType="line"
            app:layout_constraintBottom_toTopOf="@+id/btn_verify"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lyt_title"
            tools:ignore="LabelFor"
            tools:text="4564" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_verify"
            style="@style/MaterialButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/spacing_large"
            android:minHeight="0dp"
            android:padding="@dimen/spacing_default"
            android:text="@string/done"
            android:textColor="@color/white"
            android:textSize="@dimen/size_title"
            android:backgroundTint="@color/orange_3"
            android:onClick="@{()-> viewModel.onSkip()}"
            app:cornerRadius="@dimen/spacing_medium"
            app:layout_constraintBottom_toTopOf="@+id/txt_skip"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/otp_number" />

        <TextView
            android:id="@+id/txt_skip"
            style="@style/MaterialBoldTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_margin="@dimen/spacing_default"
            android:text="@string/skip"
            android:onClick="@{()-> viewModel.onSkip()}"
            android:textAllCaps="true"
            android:textColor="@color/orange_3"
            app:layout_constraintBottom_toTopOf="@+id/lyt_powered_by"
            app:layout_constraintTop_toBottomOf="@+id/btn_verify"/>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline1"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.8"/>

        <include
            android:id="@+id/lyt_powered_by"
            layout="@layout/include_powered_by"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/guideline1" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>