<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/txt_title"
            style="@style/MaterialTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="@dimen/spacing_large"
            android:text="@string/app_name"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:src="@drawable/logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_title" />

        <TextView
            android:id="@+id/txt_body"
            style="@style/MaterialTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="@dimen/spacing_large"
            android:text="@string/reach_max_tickets"
            app:layout_constraintBottom_toTopOf="@+id/btn_back"
            app:layout_constraintTop_toBottomOf="@id/icon" />

        <!--<com.google.android.material.button.MaterialButton
            android:id="@+id/btn_update"
            style="@style/MaterialButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/update"
            android:layout_marginVertical="@dimen/spacing_large"
            android:layout_marginHorizontal="@dimen/spacing_large"
            app:layout_constraintTop_toBottomOf="@+id/txt_body"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/btn_later"/>-->

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_back"
            style="@style/MaterialButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:layout_marginVertical="@dimen/spacing_large"
            android:layout_marginHorizontal="@dimen/spacing_large"
            android:backgroundTint="@color/green_500"
            app:layout_constraintTop_toBottomOf="@+id/txt_body"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>